tests/expression/list_index_type_error.sy
start :: fn {
    a :: [1, 2, 3]
    a[0] == "str"
    a[0] == 0.1

    b :: ["str", 2, 3]
    b[0] == "str"

    c :: [1, 0.1]
    c[0] == "str"
}

// error: #TypeError(_, _)
// error: #TypeError(_, _)
// error: #TypeError(_, _)
